# typed: true
# frozen_string_literal: true

# == Schema Information
#
# Table name: splits
#
#  id                 :uuid             not null, primary key
#  created_at         :datetime         not null
#  updated_at         :datetime         not null
#  exchange_id        :uuid             not null, indexed, uniquely indexed => [position]
#  register_id        :uuid             not null, indexed                                     To which register is the money going to for this split.
#  position           :integer          not null, uniquely indexed => [exchange_id]
#  amount             :integer          not null
#  counterpart_amount :integer                                                                Amount in the destination register, if it differs from 'amount' (eg: an exchange rate applies).
#  memo               :text                                                                   Detail about the exchange, to show in the destination register.
#  status             :enum             default("uncleared"), not null
#
class Split < ApplicationRecord
  extend T::Sig

  include Taggable
  include Importable

  enum :status, Exchange.statuses, validate: true

  belongs_to :exchange
  has_one :book, through: :exchange
  belongs_to :register # destination of the exchange's split

  acts_as_list scope: :exchange

  sig { returns(T.nilable(Book)) }
  def book
    super || exchange.book
  end
end
